[package]
name = "chlaty-lib-superembed"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3 
lto = true 
strip = false # Dynamic libloading will be bugged if set strip to `true`
codegen-units = 1

[dependencies]
html-escape = "0.2.13"
rand = "0.9.2"
regex = "1.11.3"
reqwest = {version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking", "json"]}
serde = "1.0.228"
serde_json = "1.0.145"
tracing = "0.1.41"
url = "2.5.7"
urlencoding = "2.1.3"
visdom = "1.0.3"
